コメントアウト変更

--- a/list.html
+++ b/list.html
@@ -5,7 +5,7 @@
     <!-- meta -->
     <meta charset="utf-8">
     
-    <!-- css -->
+    <!-- css２ -->
     <link rel="stylesheet" href="css/list.css">
     
     <!-- JS -->
